[package]
name = "example"
version = "0.1.0"
authors = ["Connor Worley <connorbworley@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lvbitfile2rust-macros = { path = "../lvbitfile2rust-macros" }
ni-fpga = "1.4.0"
ni-fpga-macros = "1.0.1"
