[package]
name = "lvbitfile2rust-macros"
version = "0.1.0"
authors = ["Connor Worley <cworley@dropbox.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
lvbitfile2rust = { path = "../lvbitfile2rust" }
quote = "1.0.7"
syn = "1.0.23"
