[package]
name = "lvbitfile2rust-macros"
version = "0.1.1"
authors = ["Connor Worley <cworley@dropbox.com>"]
edition = "2018"
license-file = "LICENSE.md"
description = "Macro entrypoint for the lvbitfile2rust crate"
readme = "README.md"
repository = "https://github.com/first-rust-competition/lvbitfile2rust"

[lib]
proc-macro = true

[dependencies]
lvbitfile2rust = { version = "0.1.0", path = "../lvbitfile2rust" }
quote = "1.0.7"
syn = "1.0.23"
