[package]
name = "lvbitfile2rust"
version = "0.1.0"
authors = ["Connor Worley <cworley@dropbox.com>"]
edition = "2018"
license = "MIT"
license-file = "LICENSE.md"
description = "Generate Rust register maps (`struct`s) from lvbitx files - in the spirit of svd2rust"
readme = "README.md"
repository = "https://github.com/first-rust-competition/lvbitfile2rust"

[dependencies]
proc-macro2 = "1.0.19"
quote = "1.0.7"
roxmltree = "0.13.0"
syn = { version = "1.0.23", features = ["full"] }
thiserror = "1.0.20"